# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  actix_web.vim  commands  crates  spec.yaml
migrations/: 20250529075807_make_status_not_null_in_subscriptions.sql  20250529080454_create_subscription_tokens_table.sql  20250624061724_seed_user.sql  20250703204635_relax_null_checks_on_idempotency.sql  20250704152440_create_issue_delivery_queue_table.sql  20250704204710_create_subscription_user.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
