[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.15.11"
actix-web = "4.10.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.16"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = { version = "0.9.1", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1.21.3"
claims = "0.8.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tokio = { version = "1.45.0", features = ["rt", "macros"] }
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"
